--- a/index.html
+++ b/index.html
@@ -3,8 +3,65 @@
   <title>Bienvenue</title>
     <head>
       <style>
-        
+        .card
+        {
+            padding: 70px 70px;
+            color: white;
+            background-color: black;
+        }
+        .slideshow-container
+        {
+            max-container: 1000px;
+            position: relative; 
+            margin: auto;
+        }
+        *{
+          border-box: border-sizing;
+         }
+        hr
+        {  
+            border: 1px solid #f1e3dd;
+        }
+        body
+        {
+            outline: 0px;
+            margin: 0px;
+            padding: 0px;
+        }
 
+      .momo
+        {
+          text-align: center;
+          font-size: 14pt;
+        }
+        .text
+        {
+          font-style: italic;
+          font-weight: 400;
+          line-height: normal;
+          color: white;
+          width: 100%;
+          font-size: 16pt;
+        }
+        .chance
+        {
+          text-align: center;
+          font-size: 12pt;
+          font-family: Calisto;
+        }
+        .titre
+        {
+            font-size: 16pt;
+            line-height: normal;
+            font-weight: 300;
+        }
+        .class
+        {
+            text-align: center;
+            font-family: Serif;
+            background-color: #f2f2f2;
+            padding: 100px 100px;
+        }
         
       </style>  
     </head>
