--- a/discovering.html
+++ b/discovering.html
@@ -1,12 +1,33 @@
 <!DOCTYPE HTML>
 <html>
-<title></title>
+<title>Etranger</title>
 <head>
-  
+  .momo
+  {
+    text-align: center;
+    font-size: 14pt;
+  }
+  .lili
+  {
+    background-color: black;
+    text-align: center;
+    line-height: 1em;
+    font-size: 15pt;
+    color: white;
+    font-weight: 300;
+    padding: 80px 80px;
+  }
+  .chance
+  {
+    text-align: center;
+    font-family: Calisto;
+    font-size: 12pt;
+  }
+    
 </head>
 <body>
 
-
+  
 
   
 </body>
