--- a/discovering.html
+++ b/discovering.html
@@ -1,7 +1,9 @@
 <!DOCTYPE HTML>
 <html>
-<title>Foreigners on twitter</title>
 <head>
+<title>Foreigners on twitter</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1"> 
+<style>
   .momo
   {
     text-align: center;
@@ -23,7 +25,7 @@
     font-family: Calisto;
     font-size: 12pt;
   }
-    
+  </style>  
 </head>
 <body>
 
