--- a/discovering.html
+++ b/discovering.html
@@ -25,6 +25,11 @@
     font-family: Calisto;
     font-size: 12pt;
   }
+  @media only screen and (max-width : 500px) and (max-height : 900px)
+  {
+
+
+  }
   </style>  
 </head>
 <body>
