--- a/discovering.html
+++ b/discovering.html
@@ -25,9 +25,10 @@
     font-family: Calisto;
     font-size: 12pt;
   }
+
   @media only screen and (max-width : 500px) and (max-height : 900px)
   {
-
+      // Affichage des téléphones portables
 
   }
   </style>  
