--- a/discovering.html
+++ b/discovering.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 <title>Foreigners on twitter</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"> 
+<meta name="viewport" content="width=device-width, initial-scale=1"> 
 <style>
-  .momo
+  .momo          //logo
   {
-    text-align: center;
-    font-size: 14pt;
+    text-align: center; 
+    font-size: 14pt;     
   }
-  .lili
+  .lili      //bannière
   {
     background-color: black;
     text-align: center;
@@ -19,17 +19,51 @@
     font-weight: 300;
     padding: 80px 80px;
   }
-  .chance
+  .chance //Pied de page
   {
     text-align: center;
     font-family: Calisto;
     font-size: 12pt;
   }
-
+  .nono    //Ecriture dans la bannière bas
+  {
+      line-height: 1em;
+      font-weight: 300;
+      font-size: 16pt;
+  }
+  .messi // Ecriture dans la bannière bas.
+  {
+    line-height: 2em;
+    font-size: 16pt;
+  }
+  .zidane // Ecriture dans la bannière bas.
+  {
+    line-height: 3em;
+    font-size: 20pt;
+  }
+  button
+  {
+    border-radius: 3px;
+    border: 1px solid black;
+    font-size: 13pt;
+    padding: 15px 15px;
+    font-family: Serif;
+    color: white;
+    background-color: #3333;
+  }
+  
+  .zero //Bannière du bas.
+  {
+    padding: 80px 80px;
+    background-color: #F0F0F0;    
+  }
+  
   @media only screen and (max-width : 500px) and (max-height : 900px)
   {
-      // Affichage des téléphones portables
-
+    lili
+    { 
+      text-align: center;
+    }
   }
   </style>  
 </head>
