--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-  <title>Bienvenue</title>
-    
+  <title>Bienvenue</title>   
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <style>
         .jean
@@ -129,6 +128,15 @@
         }
         @media only screen and (max-width: 500px) and (max-height: 900px)
         {
+          *{
+              border-box: box-sizing;
+          }
+          body
+          {
+                outline: 0px;
+                padding: 0px;
+                margin: 0px;
+          }
         }
         
       </style>  
