--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
     </head>
 
   <body oncontextmenu="return false;">
+    // We can add security codes in page.
       <div class="momo"><img src="entête.png" height="100px" width="100px"></div><hr>
       <div class="class">
         <h2>Protéger la nature.</h2>
