--- a/discovering.html
+++ b/discovering.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Foreigners on twitter</title>
+<title>Foreigners on X</title>
 <meta name="viewport" content="width=device-width, initial-scale=1"> 
 <style>
   .momo          //logo
