--- a/discovering.html
+++ b/discovering.html
@@ -3,73 +3,15 @@
 <head>
 <title>Visitors on X.</title>
 <meta name="viewport" content="width=device-width, initial-scale=1"> 
-<style>
-  .momo          //logo
-  {
-    text-align: center; 
-    font-size: 14pt;  
-    
-  }
-  .lili      //bannière
-  {
-    background-color: black;
-    text-align: center;
-    line-height: 1em;
-    font-size: 15pt;
-    color: white;
-    font-weight: 300;
-    padding: 80px 80px;
-  }
-  .chance //Pied de page
-  {
-    text-align: center;
-    font-family: Calisto;
-    font-size: 12pt;
-  }
-  .nono    //Ecriture dans la bannière bas
-  {
-      line-height: 1em;
-      font-weight: 300;
-      font-size: 16pt;
-  }
-  .messi // Ecriture dans la bannière bas.
-  {
-    line-height: 2em;
-    font-size: 16pt;
-  }
-  .zidane // Ecriture dans la bannière bas.
-  {
-    line-height: 3em;
-    font-size: 20pt;
-  }
-  button
-  {
-    border-radius: 3px;
-    border: 1px solid black;
-    font-size: 13pt;
-    padding: 15px 15px;
-    font-family: Serif;
-    color: white;
-    background-color: #3333;
-  }
-  
-  .zero //Bannière du bas.
-  {
-    padding: 80px 80px;
-    background-color: #F0F0F0;    
-  }
-  
-  @media only screen and (max-width : 500px) and (max-height : 900px)
-  {
-    lili
-    { 
-      text-align: center;
-    }
-  }
-  </style>  
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
 //We can firstly add code security in pages.
+  <div class="alert"> 
+    <i class="material-icons">
+      notifications
+    </i> Ces pages ne sont pas auto-ge&#768;ne&#768;re&#768;es;
+  </div>
 <?php
 ?>
 </body>
