--- a/unitchecking.html
+++ b/unitchecking.html
@@ -6,7 +6,7 @@
 <body>
      //Je dois mettre les codes de sécurité d'abord.
   <article> Bienvenue à tout ce qui concerne le projet valone </article>
-     <section> Les équipements pour eau, santé, artiste, empreinte carbone, recyclage d'un composant </section>
+     <section> Les équipements pour eau, santé, artisans, empreinte carbone, recyclage d'un composant </section>
      <script>
           
      </script>
